// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskModal /> should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    isLoading={false}
    onCancel={[Function]}
    onDelete={[Function]}
    onOk={[Function]}
    target={"2014-02-27T00:00:00.000Z"}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "cancelButtonDisabled": false,
      "children": <Spin
        size="default"
        spinning={false}
        wrapperClassName=""
>
        <Form
                colon={true}
                hideRequiredMark={false}
                id="task-form"
                labelCol={
                        Object {
                                "sm": Object {
                                  "span": 8,
                                },
                                "xs": Object {
                                  "span": 24,
                                },
                              }
                }
                layout="horizontal"
                onSubmit={[Function]}
                wrapperCol={
                        Object {
                                "sm": Object {
                                  "span": 16,
                                },
                                "xs": Object {
                                  "span": 24,
                                },
                              }
                }
        >
                <FormItem
                        hasFeedback={false}
                        label="Task Name"
                >
                        <Input
                                defaultValue=""
                                disabled={false}
                                name="name"
                                required={true}
                                type="text"
                        />
                </FormItem>
                <FormItem
                        hasFeedback={false}
                        label="Start Date Time"
                >
                        <PickerWrapper
                                allowClear={false}
                                locale={Object {}}
                                name="date"
                                onChange={[Function]}
                                onOk={[Function]}
                                onOpenChange={[Function]}
                                popupStyle={Object {}}
                                transitionName="slide-up"
                                value={"2014-02-27T00:00:00.000Z"}
                        />
                        <Unknown
                                disableHours={
                                        Array [
                                                24,
                                              ]
                                }
                                name="startHour"
                                onChange={[Function]}
                                value={0}
                        />
                </FormItem>
                <FormItem
                        hasFeedback={false}
                        label="End Date Time"
                >
                        <PickerWrapper
                                allowClear={false}
                                locale={Object {}}
                                onChange={[Function]}
                                onOk={[Function]}
                                onOpenChange={[Function]}
                                open={false}
                                popupStyle={Object {}}
                                transitionName="slide-up"
                                value={"2014-02-27T00:00:00.000Z"}
                        />
                        <Unknown
                                disableHours={
                                        Array [
                                                0,
                                              ]
                                }
                                name="endHour"
                                onChange={[Function]}
                                value={1}
                        />
                </FormItem>
        </Form>
</Spin>,
      "confirmLoading": false,
      "footer": <Unknown>
        <Button
                block={false}
                disabled={false}
                form="task-form"
                ghost={false}
                htmlType="submit"
                loading={false}
        >
                확인
        </Button>
        <Button
                block={false}
                disabled={false}
                ghost={false}
                htmlType="button"
                loading={false}
                onClick={[Function]}
        >
                취소
        </Button>
</Unknown>,
      "maskTransitionName": "fade",
      "okButtonDisabled": false,
      "okType": "primary",
      "onCancel": [Function],
      "title": "일정 추가",
      "transitionName": "zoom",
      "visible": true,
      "width": 520,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Form
          colon={true}
          hideRequiredMark={false}
          id="task-form"
          labelCol={
                    Object {
                              "sm": Object {
                                "span": 8,
                              },
                              "xs": Object {
                                "span": 24,
                              },
                            }
          }
          layout="horizontal"
          onSubmit={[Function]}
          wrapperCol={
                    Object {
                              "sm": Object {
                                "span": 16,
                              },
                              "xs": Object {
                                "span": 24,
                              },
                            }
          }
>
          <FormItem
                    hasFeedback={false}
                    label="Task Name"
          >
                    <Input
                              defaultValue=""
                              disabled={false}
                              name="name"
                              required={true}
                              type="text"
                    />
          </FormItem>
          <FormItem
                    hasFeedback={false}
                    label="Start Date Time"
          >
                    <PickerWrapper
                              allowClear={false}
                              locale={Object {}}
                              name="date"
                              onChange={[Function]}
                              onOk={[Function]}
                              onOpenChange={[Function]}
                              popupStyle={Object {}}
                              transitionName="slide-up"
                              value={"2014-02-27T00:00:00.000Z"}
                    />
                    <Unknown
                              disableHours={
                                        Array [
                                                  24,
                                                ]
                              }
                              name="startHour"
                              onChange={[Function]}
                              value={0}
                    />
          </FormItem>
          <FormItem
                    hasFeedback={false}
                    label="End Date Time"
          >
                    <PickerWrapper
                              allowClear={false}
                              locale={Object {}}
                              onChange={[Function]}
                              onOk={[Function]}
                              onOpenChange={[Function]}
                              open={false}
                              popupStyle={Object {}}
                              transitionName="slide-up"
                              value={"2014-02-27T00:00:00.000Z"}
                    />
                    <Unknown
                              disableHours={
                                        Array [
                                                  0,
                                                ]
                              }
                              name="endHour"
                              onChange={[Function]}
                              value={1}
                    />
          </FormItem>
</Form>,
        "size": "default",
        "spinning": false,
        "wrapperClassName": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <FormItem
              hasFeedback={false}
              label="Task Name"
>
              <Input
                            defaultValue=""
                            disabled={false}
                            name="name"
                            required={true}
                            type="text"
              />
</FormItem>,
            <FormItem
              hasFeedback={false}
              label="Start Date Time"
>
              <PickerWrapper
                            allowClear={false}
                            locale={Object {}}
                            name="date"
                            onChange={[Function]}
                            onOk={[Function]}
                            onOpenChange={[Function]}
                            popupStyle={Object {}}
                            transitionName="slide-up"
                            value={"2014-02-27T00:00:00.000Z"}
              />
              <Unknown
                            disableHours={
                                          Array [
                                                        24,
                                                      ]
                            }
                            name="startHour"
                            onChange={[Function]}
                            value={0}
              />
</FormItem>,
            <FormItem
              hasFeedback={false}
              label="End Date Time"
>
              <PickerWrapper
                            allowClear={false}
                            locale={Object {}}
                            onChange={[Function]}
                            onOk={[Function]}
                            onOpenChange={[Function]}
                            open={false}
                            popupStyle={Object {}}
                            transitionName="slide-up"
                            value={"2014-02-27T00:00:00.000Z"}
              />
              <Unknown
                            disableHours={
                                          Array [
                                                        0,
                                                      ]
                            }
                            name="endHour"
                            onChange={[Function]}
                            value={1}
              />
</FormItem>,
          ],
          "colon": true,
          "hideRequiredMark": false,
          "id": "task-form",
          "labelCol": Object {
            "sm": Object {
              "span": 8,
            },
            "xs": Object {
              "span": 24,
            },
          },
          "layout": "horizontal",
          "onSubmit": [Function],
          "wrapperCol": Object {
            "sm": Object {
              "span": 16,
            },
            "xs": Object {
              "span": 24,
            },
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Input
                defaultValue=""
                disabled={false}
                name="name"
                required={true}
                type="text"
/>,
              "hasFeedback": false,
              "label": "Task Name",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultValue": "",
                "disabled": false,
                "name": "name",
                "required": true,
                "type": "text",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <PickerWrapper
                  allowClear={false}
                  locale={Object {}}
                  name="date"
                  onChange={[Function]}
                  onOk={[Function]}
                  onOpenChange={[Function]}
                  popupStyle={Object {}}
                  transitionName="slide-up"
                  value={"2014-02-27T00:00:00.000Z"}
/>,
                <Unknown
                  disableHours={
                                    Array [
                                                      24,
                                                    ]
                  }
                  name="startHour"
                  onChange={[Function]}
                  value={0}
/>,
              ],
              "hasFeedback": false,
              "label": "Start Date Time",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowClear": false,
                  "locale": Object {},
                  "name": "date",
                  "onChange": [Function],
                  "onOk": [Function],
                  "onOpenChange": [Function],
                  "popupStyle": Object {},
                  "transitionName": "slide-up",
                  "value": "2014-02-27T00:00:00.000Z",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "disableHours": Array [
                    24,
                  ],
                  "name": "startHour",
                  "onChange": [Function],
                  "value": 0,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <PickerWrapper
                  allowClear={false}
                  locale={Object {}}
                  onChange={[Function]}
                  onOk={[Function]}
                  onOpenChange={[Function]}
                  open={false}
                  popupStyle={Object {}}
                  transitionName="slide-up"
                  value={"2014-02-27T00:00:00.000Z"}
/>,
                <Unknown
                  disableHours={
                                    Array [
                                                      0,
                                                    ]
                  }
                  name="endHour"
                  onChange={[Function]}
                  value={1}
/>,
              ],
              "hasFeedback": false,
              "label": "End Date Time",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowClear": false,
                  "locale": Object {},
                  "onChange": [Function],
                  "onOk": [Function],
                  "onOpenChange": [Function],
                  "open": false,
                  "popupStyle": Object {},
                  "transitionName": "slide-up",
                  "value": "2014-02-27T00:00:00.000Z",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "disableHours": Array [
                    0,
                  ],
                  "name": "endHour",
                  "onChange": [Function],
                  "value": 1,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "cancelButtonDisabled": false,
        "children": <Spin
          size="default"
          spinning={false}
          wrapperClassName=""
>
          <Form
                    colon={true}
                    hideRequiredMark={false}
                    id="task-form"
                    labelCol={
                              Object {
                                        "sm": Object {
                                          "span": 8,
                                        },
                                        "xs": Object {
                                          "span": 24,
                                        },
                                      }
                    }
                    layout="horizontal"
                    onSubmit={[Function]}
                    wrapperCol={
                              Object {
                                        "sm": Object {
                                          "span": 16,
                                        },
                                        "xs": Object {
                                          "span": 24,
                                        },
                                      }
                    }
          >
                    <FormItem
                              hasFeedback={false}
                              label="Task Name"
                    >
                              <Input
                                        defaultValue=""
                                        disabled={false}
                                        name="name"
                                        required={true}
                                        type="text"
                              />
                    </FormItem>
                    <FormItem
                              hasFeedback={false}
                              label="Start Date Time"
                    >
                              <PickerWrapper
                                        allowClear={false}
                                        locale={Object {}}
                                        name="date"
                                        onChange={[Function]}
                                        onOk={[Function]}
                                        onOpenChange={[Function]}
                                        popupStyle={Object {}}
                                        transitionName="slide-up"
                                        value={"2014-02-27T00:00:00.000Z"}
                              />
                              <Unknown
                                        disableHours={
                                                  Array [
                                                            24,
                                                          ]
                                        }
                                        name="startHour"
                                        onChange={[Function]}
                                        value={0}
                              />
                    </FormItem>
                    <FormItem
                              hasFeedback={false}
                              label="End Date Time"
                    >
                              <PickerWrapper
                                        allowClear={false}
                                        locale={Object {}}
                                        onChange={[Function]}
                                        onOk={[Function]}
                                        onOpenChange={[Function]}
                                        open={false}
                                        popupStyle={Object {}}
                                        transitionName="slide-up"
                                        value={"2014-02-27T00:00:00.000Z"}
                              />
                              <Unknown
                                        disableHours={
                                                  Array [
                                                            0,
                                                          ]
                                        }
                                        name="endHour"
                                        onChange={[Function]}
                                        value={1}
                              />
                    </FormItem>
          </Form>
</Spin>,
        "confirmLoading": false,
        "footer": <Unknown>
          <Button
                    block={false}
                    disabled={false}
                    form="task-form"
                    ghost={false}
                    htmlType="submit"
                    loading={false}
          >
                    확인
          </Button>
          <Button
                    block={false}
                    disabled={false}
                    ghost={false}
                    htmlType="button"
                    loading={false}
                    onClick={[Function]}
          >
                    취소
          </Button>
</Unknown>,
        "maskTransitionName": "fade",
        "okButtonDisabled": false,
        "okType": "primary",
        "onCancel": [Function],
        "title": "일정 추가",
        "transitionName": "zoom",
        "visible": true,
        "width": 520,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Form
            colon={true}
            hideRequiredMark={false}
            id="task-form"
            labelCol={
                        Object {
                                    "sm": Object {
                                      "span": 8,
                                    },
                                    "xs": Object {
                                      "span": 24,
                                    },
                                  }
            }
            layout="horizontal"
            onSubmit={[Function]}
            wrapperCol={
                        Object {
                                    "sm": Object {
                                      "span": 16,
                                    },
                                    "xs": Object {
                                      "span": 24,
                                    },
                                  }
            }
>
            <FormItem
                        hasFeedback={false}
                        label="Task Name"
            >
                        <Input
                                    defaultValue=""
                                    disabled={false}
                                    name="name"
                                    required={true}
                                    type="text"
                        />
            </FormItem>
            <FormItem
                        hasFeedback={false}
                        label="Start Date Time"
            >
                        <PickerWrapper
                                    allowClear={false}
                                    locale={Object {}}
                                    name="date"
                                    onChange={[Function]}
                                    onOk={[Function]}
                                    onOpenChange={[Function]}
                                    popupStyle={Object {}}
                                    transitionName="slide-up"
                                    value={"2014-02-27T00:00:00.000Z"}
                        />
                        <Unknown
                                    disableHours={
                                                Array [
                                                            24,
                                                          ]
                                    }
                                    name="startHour"
                                    onChange={[Function]}
                                    value={0}
                        />
            </FormItem>
            <FormItem
                        hasFeedback={false}
                        label="End Date Time"
            >
                        <PickerWrapper
                                    allowClear={false}
                                    locale={Object {}}
                                    onChange={[Function]}
                                    onOk={[Function]}
                                    onOpenChange={[Function]}
                                    open={false}
                                    popupStyle={Object {}}
                                    transitionName="slide-up"
                                    value={"2014-02-27T00:00:00.000Z"}
                        />
                        <Unknown
                                    disableHours={
                                                Array [
                                                            0,
                                                          ]
                                    }
                                    name="endHour"
                                    onChange={[Function]}
                                    value={1}
                        />
            </FormItem>
</Form>,
          "size": "default",
          "spinning": false,
          "wrapperClassName": "",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <FormItem
                hasFeedback={false}
                label="Task Name"
>
                <Input
                                defaultValue=""
                                disabled={false}
                                name="name"
                                required={true}
                                type="text"
                />
</FormItem>,
              <FormItem
                hasFeedback={false}
                label="Start Date Time"
>
                <PickerWrapper
                                allowClear={false}
                                locale={Object {}}
                                name="date"
                                onChange={[Function]}
                                onOk={[Function]}
                                onOpenChange={[Function]}
                                popupStyle={Object {}}
                                transitionName="slide-up"
                                value={"2014-02-27T00:00:00.000Z"}
                />
                <Unknown
                                disableHours={
                                                Array [
                                                                24,
                                                              ]
                                }
                                name="startHour"
                                onChange={[Function]}
                                value={0}
                />
</FormItem>,
              <FormItem
                hasFeedback={false}
                label="End Date Time"
>
                <PickerWrapper
                                allowClear={false}
                                locale={Object {}}
                                onChange={[Function]}
                                onOk={[Function]}
                                onOpenChange={[Function]}
                                open={false}
                                popupStyle={Object {}}
                                transitionName="slide-up"
                                value={"2014-02-27T00:00:00.000Z"}
                />
                <Unknown
                                disableHours={
                                                Array [
                                                                0,
                                                              ]
                                }
                                name="endHour"
                                onChange={[Function]}
                                value={1}
                />
</FormItem>,
            ],
            "colon": true,
            "hideRequiredMark": false,
            "id": "task-form",
            "labelCol": Object {
              "sm": Object {
                "span": 8,
              },
              "xs": Object {
                "span": 24,
              },
            },
            "layout": "horizontal",
            "onSubmit": [Function],
            "wrapperCol": Object {
              "sm": Object {
                "span": 16,
              },
              "xs": Object {
                "span": 24,
              },
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Input
                  defaultValue=""
                  disabled={false}
                  name="name"
                  required={true}
                  type="text"
/>,
                "hasFeedback": false,
                "label": "Task Name",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "defaultValue": "",
                  "disabled": false,
                  "name": "name",
                  "required": true,
                  "type": "text",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <PickerWrapper
                    allowClear={false}
                    locale={Object {}}
                    name="date"
                    onChange={[Function]}
                    onOk={[Function]}
                    onOpenChange={[Function]}
                    popupStyle={Object {}}
                    transitionName="slide-up"
                    value={"2014-02-27T00:00:00.000Z"}
/>,
                  <Unknown
                    disableHours={
                                        Array [
                                                            24,
                                                          ]
                    }
                    name="startHour"
                    onChange={[Function]}
                    value={0}
/>,
                ],
                "hasFeedback": false,
                "label": "Start Date Time",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "allowClear": false,
                    "locale": Object {},
                    "name": "date",
                    "onChange": [Function],
                    "onOk": [Function],
                    "onOpenChange": [Function],
                    "popupStyle": Object {},
                    "transitionName": "slide-up",
                    "value": "2014-02-27T00:00:00.000Z",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "disableHours": Array [
                      24,
                    ],
                    "name": "startHour",
                    "onChange": [Function],
                    "value": 0,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <PickerWrapper
                    allowClear={false}
                    locale={Object {}}
                    onChange={[Function]}
                    onOk={[Function]}
                    onOpenChange={[Function]}
                    open={false}
                    popupStyle={Object {}}
                    transitionName="slide-up"
                    value={"2014-02-27T00:00:00.000Z"}
/>,
                  <Unknown
                    disableHours={
                                        Array [
                                                            0,
                                                          ]
                    }
                    name="endHour"
                    onChange={[Function]}
                    value={1}
/>,
                ],
                "hasFeedback": false,
                "label": "End Date Time",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "allowClear": false,
                    "locale": Object {},
                    "onChange": [Function],
                    "onOk": [Function],
                    "onOpenChange": [Function],
                    "open": false,
                    "popupStyle": Object {},
                    "transitionName": "slide-up",
                    "value": "2014-02-27T00:00:00.000Z",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "disableHours": Array [
                      0,
                    ],
                    "name": "endHour",
                    "onChange": [Function],
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<TaskModal task={task}/> should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    isLoading={false}
    onCancel={[Function]}
    onDelete={[Function]}
    onOk={[Function]}
    target={
        Task {
            "date": "2014-02-10",
            "endHour": 3,
            "id": 1,
            "name": "귤 까기01",
            "startHour": 1,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "cancelButtonDisabled": false,
      "children": <Spin
        size="default"
        spinning={false}
        wrapperClassName=""
>
        <Form
                colon={true}
                hideRequiredMark={false}
                id="task-form"
                labelCol={
                        Object {
                                "sm": Object {
                                  "span": 8,
                                },
                                "xs": Object {
                                  "span": 24,
                                },
                              }
                }
                layout="horizontal"
                onSubmit={[Function]}
                wrapperCol={
                        Object {
                                "sm": Object {
                                  "span": 16,
                                },
                                "xs": Object {
                                  "span": 24,
                                },
                              }
                }
        >
                <FormItem
                        hasFeedback={false}
                        label="Task Name"
                >
                        <Input
                                defaultValue="귤 까기01"
                                disabled={false}
                                name="name"
                                required={true}
                                type="text"
                        />
                </FormItem>
                <FormItem
                        hasFeedback={false}
                        label="Start Date Time"
                >
                        <PickerWrapper
                                allowClear={false}
                                locale={Object {}}
                                name="date"
                                onChange={[Function]}
                                onOk={[Function]}
                                onOpenChange={[Function]}
                                popupStyle={Object {}}
                                transitionName="slide-up"
                                value={"2014-02-10T00:00:00.000Z"}
                        />
                        <Unknown
                                disableHours={
                                        Array [
                                                24,
                                              ]
                                }
                                name="startHour"
                                onChange={[Function]}
                                value={1}
                        />
                </FormItem>
                <FormItem
                        hasFeedback={false}
                        label="End Date Time"
                >
                        <PickerWrapper
                                allowClear={false}
                                locale={Object {}}
                                onChange={[Function]}
                                onOk={[Function]}
                                onOpenChange={[Function]}
                                open={false}
                                popupStyle={Object {}}
                                transitionName="slide-up"
                                value={"2014-02-10T00:00:00.000Z"}
                        />
                        <Unknown
                                disableHours={
                                        Array [
                                                0,
                                                1,
                                              ]
                                }
                                name="endHour"
                                onChange={[Function]}
                                value={3}
                        />
                </FormItem>
        </Form>
</Spin>,
      "confirmLoading": false,
      "footer": <Unknown>
        <Button
                block={false}
                disabled={false}
                form="task-form"
                ghost={false}
                htmlType="submit"
                loading={false}
        >
                확인
        </Button>
        <Button
                block={false}
                disabled={false}
                ghost={false}
                htmlType="button"
                loading={false}
                onClick={[Function]}
        >
                취소
        </Button>
        <Button
                block={false}
                disabled={false}
                ghost={false}
                htmlType="button"
                loading={false}
                onClick={[Function]}
        >
                삭제
        </Button>
</Unknown>,
      "maskTransitionName": "fade",
      "okButtonDisabled": false,
      "okType": "primary",
      "onCancel": [Function],
      "title": "일정 수정",
      "transitionName": "zoom",
      "visible": true,
      "width": 520,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Form
          colon={true}
          hideRequiredMark={false}
          id="task-form"
          labelCol={
                    Object {
                              "sm": Object {
                                "span": 8,
                              },
                              "xs": Object {
                                "span": 24,
                              },
                            }
          }
          layout="horizontal"
          onSubmit={[Function]}
          wrapperCol={
                    Object {
                              "sm": Object {
                                "span": 16,
                              },
                              "xs": Object {
                                "span": 24,
                              },
                            }
          }
>
          <FormItem
                    hasFeedback={false}
                    label="Task Name"
          >
                    <Input
                              defaultValue="귤 까기01"
                              disabled={false}
                              name="name"
                              required={true}
                              type="text"
                    />
          </FormItem>
          <FormItem
                    hasFeedback={false}
                    label="Start Date Time"
          >
                    <PickerWrapper
                              allowClear={false}
                              locale={Object {}}
                              name="date"
                              onChange={[Function]}
                              onOk={[Function]}
                              onOpenChange={[Function]}
                              popupStyle={Object {}}
                              transitionName="slide-up"
                              value={"2014-02-10T00:00:00.000Z"}
                    />
                    <Unknown
                              disableHours={
                                        Array [
                                                  24,
                                                ]
                              }
                              name="startHour"
                              onChange={[Function]}
                              value={1}
                    />
          </FormItem>
          <FormItem
                    hasFeedback={false}
                    label="End Date Time"
          >
                    <PickerWrapper
                              allowClear={false}
                              locale={Object {}}
                              onChange={[Function]}
                              onOk={[Function]}
                              onOpenChange={[Function]}
                              open={false}
                              popupStyle={Object {}}
                              transitionName="slide-up"
                              value={"2014-02-10T00:00:00.000Z"}
                    />
                    <Unknown
                              disableHours={
                                        Array [
                                                  0,
                                                  1,
                                                ]
                              }
                              name="endHour"
                              onChange={[Function]}
                              value={3}
                    />
          </FormItem>
</Form>,
        "size": "default",
        "spinning": false,
        "wrapperClassName": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <FormItem
              hasFeedback={false}
              label="Task Name"
>
              <Input
                            defaultValue="귤 까기01"
                            disabled={false}
                            name="name"
                            required={true}
                            type="text"
              />
</FormItem>,
            <FormItem
              hasFeedback={false}
              label="Start Date Time"
>
              <PickerWrapper
                            allowClear={false}
                            locale={Object {}}
                            name="date"
                            onChange={[Function]}
                            onOk={[Function]}
                            onOpenChange={[Function]}
                            popupStyle={Object {}}
                            transitionName="slide-up"
                            value={"2014-02-10T00:00:00.000Z"}
              />
              <Unknown
                            disableHours={
                                          Array [
                                                        24,
                                                      ]
                            }
                            name="startHour"
                            onChange={[Function]}
                            value={1}
              />
</FormItem>,
            <FormItem
              hasFeedback={false}
              label="End Date Time"
>
              <PickerWrapper
                            allowClear={false}
                            locale={Object {}}
                            onChange={[Function]}
                            onOk={[Function]}
                            onOpenChange={[Function]}
                            open={false}
                            popupStyle={Object {}}
                            transitionName="slide-up"
                            value={"2014-02-10T00:00:00.000Z"}
              />
              <Unknown
                            disableHours={
                                          Array [
                                                        0,
                                                        1,
                                                      ]
                            }
                            name="endHour"
                            onChange={[Function]}
                            value={3}
              />
</FormItem>,
          ],
          "colon": true,
          "hideRequiredMark": false,
          "id": "task-form",
          "labelCol": Object {
            "sm": Object {
              "span": 8,
            },
            "xs": Object {
              "span": 24,
            },
          },
          "layout": "horizontal",
          "onSubmit": [Function],
          "wrapperCol": Object {
            "sm": Object {
              "span": 16,
            },
            "xs": Object {
              "span": 24,
            },
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Input
                defaultValue="귤 까기01"
                disabled={false}
                name="name"
                required={true}
                type="text"
/>,
              "hasFeedback": false,
              "label": "Task Name",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultValue": "귤 까기01",
                "disabled": false,
                "name": "name",
                "required": true,
                "type": "text",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <PickerWrapper
                  allowClear={false}
                  locale={Object {}}
                  name="date"
                  onChange={[Function]}
                  onOk={[Function]}
                  onOpenChange={[Function]}
                  popupStyle={Object {}}
                  transitionName="slide-up"
                  value={"2014-02-10T00:00:00.000Z"}
/>,
                <Unknown
                  disableHours={
                                    Array [
                                                      24,
                                                    ]
                  }
                  name="startHour"
                  onChange={[Function]}
                  value={1}
/>,
              ],
              "hasFeedback": false,
              "label": "Start Date Time",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowClear": false,
                  "locale": Object {},
                  "name": "date",
                  "onChange": [Function],
                  "onOk": [Function],
                  "onOpenChange": [Function],
                  "popupStyle": Object {},
                  "transitionName": "slide-up",
                  "value": "2014-02-10T00:00:00.000Z",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "disableHours": Array [
                    24,
                  ],
                  "name": "startHour",
                  "onChange": [Function],
                  "value": 1,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <PickerWrapper
                  allowClear={false}
                  locale={Object {}}
                  onChange={[Function]}
                  onOk={[Function]}
                  onOpenChange={[Function]}
                  open={false}
                  popupStyle={Object {}}
                  transitionName="slide-up"
                  value={"2014-02-10T00:00:00.000Z"}
/>,
                <Unknown
                  disableHours={
                                    Array [
                                                      0,
                                                      1,
                                                    ]
                  }
                  name="endHour"
                  onChange={[Function]}
                  value={3}
/>,
              ],
              "hasFeedback": false,
              "label": "End Date Time",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowClear": false,
                  "locale": Object {},
                  "onChange": [Function],
                  "onOk": [Function],
                  "onOpenChange": [Function],
                  "open": false,
                  "popupStyle": Object {},
                  "transitionName": "slide-up",
                  "value": "2014-02-10T00:00:00.000Z",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "disableHours": Array [
                    0,
                    1,
                  ],
                  "name": "endHour",
                  "onChange": [Function],
                  "value": 3,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "cancelButtonDisabled": false,
        "children": <Spin
          size="default"
          spinning={false}
          wrapperClassName=""
>
          <Form
                    colon={true}
                    hideRequiredMark={false}
                    id="task-form"
                    labelCol={
                              Object {
                                        "sm": Object {
                                          "span": 8,
                                        },
                                        "xs": Object {
                                          "span": 24,
                                        },
                                      }
                    }
                    layout="horizontal"
                    onSubmit={[Function]}
                    wrapperCol={
                              Object {
                                        "sm": Object {
                                          "span": 16,
                                        },
                                        "xs": Object {
                                          "span": 24,
                                        },
                                      }
                    }
          >
                    <FormItem
                              hasFeedback={false}
                              label="Task Name"
                    >
                              <Input
                                        defaultValue="귤 까기01"
                                        disabled={false}
                                        name="name"
                                        required={true}
                                        type="text"
                              />
                    </FormItem>
                    <FormItem
                              hasFeedback={false}
                              label="Start Date Time"
                    >
                              <PickerWrapper
                                        allowClear={false}
                                        locale={Object {}}
                                        name="date"
                                        onChange={[Function]}
                                        onOk={[Function]}
                                        onOpenChange={[Function]}
                                        popupStyle={Object {}}
                                        transitionName="slide-up"
                                        value={"2014-02-10T00:00:00.000Z"}
                              />
                              <Unknown
                                        disableHours={
                                                  Array [
                                                            24,
                                                          ]
                                        }
                                        name="startHour"
                                        onChange={[Function]}
                                        value={1}
                              />
                    </FormItem>
                    <FormItem
                              hasFeedback={false}
                              label="End Date Time"
                    >
                              <PickerWrapper
                                        allowClear={false}
                                        locale={Object {}}
                                        onChange={[Function]}
                                        onOk={[Function]}
                                        onOpenChange={[Function]}
                                        open={false}
                                        popupStyle={Object {}}
                                        transitionName="slide-up"
                                        value={"2014-02-10T00:00:00.000Z"}
                              />
                              <Unknown
                                        disableHours={
                                                  Array [
                                                            0,
                                                            1,
                                                          ]
                                        }
                                        name="endHour"
                                        onChange={[Function]}
                                        value={3}
                              />
                    </FormItem>
          </Form>
</Spin>,
        "confirmLoading": false,
        "footer": <Unknown>
          <Button
                    block={false}
                    disabled={false}
                    form="task-form"
                    ghost={false}
                    htmlType="submit"
                    loading={false}
          >
                    확인
          </Button>
          <Button
                    block={false}
                    disabled={false}
                    ghost={false}
                    htmlType="button"
                    loading={false}
                    onClick={[Function]}
          >
                    취소
          </Button>
          <Button
                    block={false}
                    disabled={false}
                    ghost={false}
                    htmlType="button"
                    loading={false}
                    onClick={[Function]}
          >
                    삭제
          </Button>
</Unknown>,
        "maskTransitionName": "fade",
        "okButtonDisabled": false,
        "okType": "primary",
        "onCancel": [Function],
        "title": "일정 수정",
        "transitionName": "zoom",
        "visible": true,
        "width": 520,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Form
            colon={true}
            hideRequiredMark={false}
            id="task-form"
            labelCol={
                        Object {
                                    "sm": Object {
                                      "span": 8,
                                    },
                                    "xs": Object {
                                      "span": 24,
                                    },
                                  }
            }
            layout="horizontal"
            onSubmit={[Function]}
            wrapperCol={
                        Object {
                                    "sm": Object {
                                      "span": 16,
                                    },
                                    "xs": Object {
                                      "span": 24,
                                    },
                                  }
            }
>
            <FormItem
                        hasFeedback={false}
                        label="Task Name"
            >
                        <Input
                                    defaultValue="귤 까기01"
                                    disabled={false}
                                    name="name"
                                    required={true}
                                    type="text"
                        />
            </FormItem>
            <FormItem
                        hasFeedback={false}
                        label="Start Date Time"
            >
                        <PickerWrapper
                                    allowClear={false}
                                    locale={Object {}}
                                    name="date"
                                    onChange={[Function]}
                                    onOk={[Function]}
                                    onOpenChange={[Function]}
                                    popupStyle={Object {}}
                                    transitionName="slide-up"
                                    value={"2014-02-10T00:00:00.000Z"}
                        />
                        <Unknown
                                    disableHours={
                                                Array [
                                                            24,
                                                          ]
                                    }
                                    name="startHour"
                                    onChange={[Function]}
                                    value={1}
                        />
            </FormItem>
            <FormItem
                        hasFeedback={false}
                        label="End Date Time"
            >
                        <PickerWrapper
                                    allowClear={false}
                                    locale={Object {}}
                                    onChange={[Function]}
                                    onOk={[Function]}
                                    onOpenChange={[Function]}
                                    open={false}
                                    popupStyle={Object {}}
                                    transitionName="slide-up"
                                    value={"2014-02-10T00:00:00.000Z"}
                        />
                        <Unknown
                                    disableHours={
                                                Array [
                                                            0,
                                                            1,
                                                          ]
                                    }
                                    name="endHour"
                                    onChange={[Function]}
                                    value={3}
                        />
            </FormItem>
</Form>,
          "size": "default",
          "spinning": false,
          "wrapperClassName": "",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <FormItem
                hasFeedback={false}
                label="Task Name"
>
                <Input
                                defaultValue="귤 까기01"
                                disabled={false}
                                name="name"
                                required={true}
                                type="text"
                />
</FormItem>,
              <FormItem
                hasFeedback={false}
                label="Start Date Time"
>
                <PickerWrapper
                                allowClear={false}
                                locale={Object {}}
                                name="date"
                                onChange={[Function]}
                                onOk={[Function]}
                                onOpenChange={[Function]}
                                popupStyle={Object {}}
                                transitionName="slide-up"
                                value={"2014-02-10T00:00:00.000Z"}
                />
                <Unknown
                                disableHours={
                                                Array [
                                                                24,
                                                              ]
                                }
                                name="startHour"
                                onChange={[Function]}
                                value={1}
                />
</FormItem>,
              <FormItem
                hasFeedback={false}
                label="End Date Time"
>
                <PickerWrapper
                                allowClear={false}
                                locale={Object {}}
                                onChange={[Function]}
                                onOk={[Function]}
                                onOpenChange={[Function]}
                                open={false}
                                popupStyle={Object {}}
                                transitionName="slide-up"
                                value={"2014-02-10T00:00:00.000Z"}
                />
                <Unknown
                                disableHours={
                                                Array [
                                                                0,
                                                                1,
                                                              ]
                                }
                                name="endHour"
                                onChange={[Function]}
                                value={3}
                />
</FormItem>,
            ],
            "colon": true,
            "hideRequiredMark": false,
            "id": "task-form",
            "labelCol": Object {
              "sm": Object {
                "span": 8,
              },
              "xs": Object {
                "span": 24,
              },
            },
            "layout": "horizontal",
            "onSubmit": [Function],
            "wrapperCol": Object {
              "sm": Object {
                "span": 16,
              },
              "xs": Object {
                "span": 24,
              },
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Input
                  defaultValue="귤 까기01"
                  disabled={false}
                  name="name"
                  required={true}
                  type="text"
/>,
                "hasFeedback": false,
                "label": "Task Name",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "defaultValue": "귤 까기01",
                  "disabled": false,
                  "name": "name",
                  "required": true,
                  "type": "text",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <PickerWrapper
                    allowClear={false}
                    locale={Object {}}
                    name="date"
                    onChange={[Function]}
                    onOk={[Function]}
                    onOpenChange={[Function]}
                    popupStyle={Object {}}
                    transitionName="slide-up"
                    value={"2014-02-10T00:00:00.000Z"}
/>,
                  <Unknown
                    disableHours={
                                        Array [
                                                            24,
                                                          ]
                    }
                    name="startHour"
                    onChange={[Function]}
                    value={1}
/>,
                ],
                "hasFeedback": false,
                "label": "Start Date Time",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "allowClear": false,
                    "locale": Object {},
                    "name": "date",
                    "onChange": [Function],
                    "onOk": [Function],
                    "onOpenChange": [Function],
                    "popupStyle": Object {},
                    "transitionName": "slide-up",
                    "value": "2014-02-10T00:00:00.000Z",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "disableHours": Array [
                      24,
                    ],
                    "name": "startHour",
                    "onChange": [Function],
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <PickerWrapper
                    allowClear={false}
                    locale={Object {}}
                    onChange={[Function]}
                    onOk={[Function]}
                    onOpenChange={[Function]}
                    open={false}
                    popupStyle={Object {}}
                    transitionName="slide-up"
                    value={"2014-02-10T00:00:00.000Z"}
/>,
                  <Unknown
                    disableHours={
                                        Array [
                                                            0,
                                                            1,
                                                          ]
                    }
                    name="endHour"
                    onChange={[Function]}
                    value={3}
/>,
                ],
                "hasFeedback": false,
                "label": "End Date Time",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "allowClear": false,
                    "locale": Object {},
                    "onChange": [Function],
                    "onOk": [Function],
                    "onOpenChange": [Function],
                    "open": false,
                    "popupStyle": Object {},
                    "transitionName": "slide-up",
                    "value": "2014-02-10T00:00:00.000Z",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "disableHours": Array [
                      0,
                      1,
                    ],
                    "name": "endHour",
                    "onChange": [Function],
                    "value": 3,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
